[package]
name = "wimtd"
version = "0.1.0"
edition = "2021"

#[target.'cfg(target_os = "macos")'.dependencies]
#core-graphics = "0.22"
#core-foundation = "0.9"
#appkit-nsworkspace-bindings = { path = "./appkit-nsworkspace-bindings", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "handleapi"] }

#[target.'cfg(target_os = "linux")'.dependencies]
#xcb = { version = "0.10.1", features = [ "randr" ] }
#xcb-util = { version = "0.4.0", features = [ "ewmh" ] }

[dependencies]
sqlite = "0.26.0"